[project]
name = "py-rbig"
version = "0.1.0"
description = "Rotation-Based Iterative Gaussianization (RBIG) for multivariate data analysis."
authors = [
    { name = "Juan Emmanuel Johnson", email = "jemanjohnson34@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<3.14"
keywords = ["RBIG", "Gaussianization", "information theory", "machine learning"]
classifiers = [
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
]

[project.urls]
Repository = "https://github.com/jejjohnson/rbig"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-pretty>=1.2.0",
    "coverage>=7.4.0",
]
dev = [
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
]
exp = [
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "loguru>=0.7.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
    "jupytext>=1.16.0",
    "matplotlib>=3.7.0",
]
all = [
    "py-rbig[test,dev,exp,docs]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rbig"]

[dependency-groups]
dev = [
    "py-rbig[dev,test]",
]

[tool.pytest.ini_options]
filterwarnings = ["error", "ignore::DeprecationWarning"]
testpaths = ["rbig", "tests"]
xfail_strict = true

[tool.ruff]
fix = true
line-length = 88
target-version = "py310"
exclude = ["docs/", "notebooks/"]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "Q",
    "PLE",
    "PIE",
    "RUF",
]
ignore = [
    "E402",
    "E731",
    "E501",
    "E741",
    "PLR2004",
    "PLR0913",
    "ISC001",
    "RUF002",
]
unfixable = ["ERA001", "F841", "T201", "T203"]

[tool.coverage.report]
fail_under = 50
precision = 1
show_missing = true
skip_covered = true

[tool.coverage.run]
branch = true
command_line = "--module pytest"
data_file = "reports/.coverage"
source = ["rbig"]

[tool.coverage.xml]
output = "reports/coverage.xml"
