[project]
name = "py-rbig"
version = "0.1.0"
description = "Rotation-Based Iterative Gaussianization (RBIG) for multivariate data analysis."
authors = [{ name = "Juan Emmanuel Johnson", email = "jemanjohnson34@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "pytest-pretty>=1.2.0", "coverage>=7.4.0"]
dev = ["ruff>=0.8.0", "pre-commit>=4.0.0"]
xarray = ["xarray>=2022.0.0"]
all = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-pretty>=1.2.0",
    "coverage>=7.4.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "xarray>=2022.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rbig"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
