[project]
name = "rbig"
version = "0.1.10"
description = "Rotation-Based Iterative Gaussianization — density estimation, IT measures, and generative modeling"
authors = [
    { name = "Juan Emmanuel Johnson", email = "jemanjohnson34@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["gaussianization", "density estimation", "information theory", "generative modeling"]
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Development Status :: 2 - Pre-Alpha",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "python-picard>=0.7",
    "tqdm>=4.60",
]

[project.urls]
Repository = "https://github.com/jejjohnson/rbig"
Documentation = "https://jejjohnson.github.io/rbig"

[project.optional-dependencies]
image = ["PyWavelets>=1.6"]
xarray = ["xarray>=2024.1"]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-pretty>=1.2.0",
    "pytest-xdist>=3.5.0",
    "coverage>=7.4.0",
    "PyWavelets>=1.6",
    "xarray>=2024.1",
]
dev = [
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "nbstripout>=0.7.1",
]
all = [
    "rbig[test,dev,image,xarray]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "rbig[dev,test]",
]
docs = [
    "rbig[all]",
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-jupyter>=0.25",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[tool.pytest.ini_options]
filterwarnings = ["error", "ignore::DeprecationWarning"]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--tb=short"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
fix = true
line-length = 88
target-version = "py310"
exclude = ["docs/", "notebooks/"]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "YTT",
    "B",
    "Q",
    "PLE",
    "PLR",
    "PLW",
    "PIE",
    "PYI",
    "TID",
    "ISC",
    "RUF",
]
ignore = [
    "E402",
    "E731",
    "E501",
    "S101",
    "F722",
    "E741",
    "E743",
    "F821",
    "PLR2004",
    "PLR0913",
    "ISC001",
    "RUF002",
    "RUF046",
    "PYI061",
]
unfixable = ["ERA001", "F841", "T201", "T203"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
docstring-code-format = true

[tool.coverage.report]
fail_under = 50
precision = 1
show_missing = true
skip_covered = true

[tool.coverage.run]
branch = true
command_line = "--module pytest"
data_file = "reports/.coverage"
source = ["rbig"]

[tool.coverage.xml]
output = "reports/coverage.xml"
